# opensiri-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: README.md
app/opensiri-ai/: Package.swift
app/opensiri-ai/Sources/OpenSiriAI/: AppState.swift  FloatingWindow.swift  HarnessBridge.swift  HotKeyManager.swift  (+9 more)
app/opensiri-ai/scripts/: build.sh  make_icns.swift  package.sh
docs/: architecture.md  connectors.md  hypersave-integration.md  indexing.md  permissions.md  product.md  runtime.md  siri_ai_comparison.md
scripts/: compare_mac_models.py  eventkit_bridge.swift  install-finder-quick-action.sh  ocr_image.swift
src/eliot_harness/: __init__.py  action_router.py  analysis_model.py  approval.py  audit.py  checks.py  cli.py  config.py  context.py  executor.py  guard.py  hypersave.py  indexer.py  local_index.py  mac_ax.py  model.py  permissions.py  policy.py  process.py  prompt.py  references.py  runtime.py  schema.py  server.py  session.py  session_store.py  sources.py  tool_catalog.py  transcript.py  vision.py  writing.py
src/eliot_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eliot_harness/connectors/: __init__.py  applescript.py  base.py  browser.py  calendar.py  contacts.py  files.py  finder.py  mail.py  maps.py  memory.py  messages.py  messages_index.py  music.py  notes.py  photos.py  podcasts.py  registry.py  reminders.py  safari.py  shortcuts.py  system_control.py  visual.py  web.py
tests/: siri_examples_acceptance.py  test_core.py  test_dynamic_runtime.py  test_robustness.py  wwdc_acceptance.py
(+9 files in other folders)
