[project]
name = "eliot-harness"
version = "0.1.0"
description = "Reference harness for Eliot Mac agent and Hypersave personal context"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eliot-harness = "eliot_harness.cli:main"
opensiri-index = "eliot_harness.indexer:main"

[project.optional-dependencies]
mac = ["pyobjc-framework-ApplicationServices", "pyobjc-framework-Cocoa"]

[tool.pytest.ini_options]
pythonpath = ["src"]
